<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="110dp"
        app:srcCompat="@drawable/logo1" />


    <EditText

        android:id="@+id/edittext_new_useremail"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:hint="@string/email_id"/>

    <EditText

        android:id="@+id/edittext_new_username"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edittext_new_password"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_new_cnf_password"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/register" />

</LinearLayout>
