<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background1">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="110dp"
        app:srcCompat="@drawable/logo1" />

    <EditText

        android:id="@+id/edittext_username"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/not_registered"/>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:text="@string/signup"
            android:textColor="#000000"
            android:textStyle="bold" />


    </LinearLayout>




</LinearLayout>